--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1' > 
+  <meta charset="UTF-8"> 
   <head> 
     
   <title>Mundo RC MPM</title>
