--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
                           en el mundillo de los coches teledirigido y no os importa gastaros un poco más, podeís obtar por<br clear="top">
                           por los cocher teledirigidos a combustión, ya que si tienes experiencia en el mundillo sabrás como<br clear="top">
                           poder ajustarlo y hacerle el mantenimiento requerido al motor de combustión.  
-
-
+                          <br clear="top"><br clear="top"><br clear="top"></p>
+   
+                          <a href="https://miguelpilotompm.github.io/Web-principal/"
+                          <p><font size="8" color="red"><center>Página de inicio</center></font></p></a>
 
 
   </body>
